--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Title -->
-        <title>About Me</title>
+        <title>About Me!</title>
 
         <!-- Customized Css Style -->
         <link rel="stylesheet" href="css/contact.css">
